ADD_DEFINITIONS(-Wall)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

# Generate version header file
CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/version.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/version.h
  ESCAPE_QUOTES @ONLY
  )


ADD_EXECUTABLE(ljfluid main.cpp)
TARGET_LINK_LIBRARIES(ljfluid
  ${BOOST_PROGRAM_OPTIONS_LIBRARY}
  ${GSL_LIBRARIES})
