ADD_DEFINITIONS(-Wall)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

# Generate version header file
CONFIGURE_FILE(
  ${CMAKE_CURRENT_SOURCE_DIR}/version.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/version.h
  ESCAPE_QUOTES @ONLY
  )


ADD_EXECUTABLE(ljfluid2d main.cpp)
SET_TARGET_PROPERTIES(ljfluid2d PROPERTIES COMPILE_FLAGS "-DDIM_2D")
TARGET_LINK_LIBRARIES(ljfluid2d
  ${BOOST_PROGRAM_OPTIONS_LIBRARY}
  ${GSL_LIBRARIES})

ADD_EXECUTABLE(ljfluid3d main.cpp)
SET_TARGET_PROPERTIES(ljfluid3d PROPERTIES COMPILE_FLAGS "-DDIM_3D")
TARGET_LINK_LIBRARIES(ljfluid3d
  ${BOOST_PROGRAM_OPTIONS_LIBRARY}
  ${GSL_LIBRARIES})
