halmd_add_library(halmd_mdsim
  box.cpp
  clock.cpp
  core.cpp
  force.cpp
  integrator.cpp
  mobility.cpp
  neighbour.cpp
  particle.cpp
  position.cpp
  sort.cpp
  velocity.cpp
)
halmd_add_modules(
  libhalmd_mdsim_box
  libhalmd_mdsim_core
  libhalmd_mdsim_clock
  libhalmd_mdsim_force
  libhalmd_mdsim_integrator
  libhalmd_mdsim_mobility
  libhalmd_mdsim_neighbour
  libhalmd_mdsim_particle
  libhalmd_mdsim_position
  libhalmd_mdsim_sort
  libhalmd_mdsim_velocity
)

add_subdirectory(integrators)
add_subdirectory(forces)

if(WITH_CUDA)
  add_subdirectory(gpu)
endif(WITH_CUDA)
add_subdirectory(host)
