halmd_add_library(halmd_observables
  blocking_scheme.cpp
  density_mode.cpp
  runtime_estimate.cpp
  phase_space.cpp
  sampler.cpp
  ssf.cpp
  thermodynamics.cpp
)
halmd_add_modules(
  libhalmd_observables_blocking_scheme
  libhalmd_observables_density_mode
  libhalmd_observables_runtime_estimate
  libhalmd_observables_phase_space
  libhalmd_observables_sampler
  libhalmd_observables_ssf
  libhalmd_observables_thermodynamics
)

if(WITH_CUDA)
  add_subdirectory(gpu)
endif(WITH_CUDA)
add_subdirectory(host)
add_subdirectory(samples)
add_subdirectory(utility)
