halmd_add_library(halmd_observables
  binned_phase_space.cpp
  density_mode.cpp
  runtime_estimate.cpp
  phase_space.cpp
  profiles.cpp
  sampler.cpp
  ssf.cpp
  thermodynamics.cpp
)
halmd_add_modules(
  libhalmd_observables_binned_phase_space
  libhalmd_observables_density_mode
  libhalmd_observables_runtime_estimate
  libhalmd_observables_phase_space
  libhalmd_observables_profiles
  libhalmd_observables_sampler
  libhalmd_observables_ssf
  libhalmd_observables_thermodynamics
)

add_subdirectory(samples) # must appear before dynamics in order to register blocking_scheme_base before blocking_scheme
add_subdirectory(fields)
add_subdirectory(dynamics)
add_subdirectory(host)
if(WITH_CUDA)
  add_subdirectory(gpu)
endif(WITH_CUDA)
add_subdirectory(utility)
